# py-telegram-logger-client

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yml
telegram_logger_client/: __init__.py  __main__.py  _constants.py  _logging_handler.py  telegram_logger_client.py
